GDA-6009 Migrate i08 to new configuration layout
Change-Id: I8c50aa681c6772cbc8d74aa1f6872f4a482dace8