@@ -1,11 +1,21 @@
 #!/bin/bash
+# This script is only invoked when user gda2 ssh's to the control machine. It is run by an entry in gda's ~/.ssh/authorized_keys
 
-if [ -f "/etc/profile.d/modules.sh" ]; then
-    . /etc/profile.d/modules.sh
-fi
+here_dir="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
-. /dls_sw/$BEAMLINE/etc/gda_environment.sh
+# This script is run as a single command by ssh, so we need to set up our environment
+# See http://stackoverflow.com/questions/216202/why-does-an-ssh-remote-command-get-fewer-environment-variables-then-when-run-man
+. /usr/share/Modules/init/bash
 
-killall java
+# There is no user or screen to prompt or display pop-ups
+export GDA_NO_PROMPT=true
 
-JAVA_OPTS="-Xms1024m -Xmx4096m -XX:PermSize=512m -XX:MaxPermSize=1024m" /dls_sw/i08/software/gda/workspace_git/gda-core.git/uk.ac.gda.core/bin/gda --config=/dls_sw/i08/software/gda/config --debug -p 8001 --restart servers
+# Set an environment variable to indicate we came through the remote startup script, so that we can error if we attempt to do this recursively
+export GDA_IN_REMOTE_STARTUP=true
+
+if [[ -n "${SSH_ORIGINAL_COMMAND}" ]]; then 
+    ${here_dir}/gda  --${SSH_ORIGINAL_COMMAND} --mode=live servers
+else
+    ${here_dir}/gda --restart --mode=live servers
+fi 
+
